@@ -3,6 +3,7 @@ package com.bssm.interceptor.common.config.security;
 import com.bssm.interceptor.common.config.security.jwt.JwtExceptionCode;
 import com.bssm.interceptor.common.config.security.jwt.JwtProperty;
 import com.bssm.interceptor.app.web.path.ApiPath;
+import java.nio.charset.StandardCharsets;
 import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.web.AuthenticationEntryPoint;
 import org.springframework.stereotype.Component;
@@ -21,10 +22,13 @@ public class CustomAuthenticationEntryPoint implements AuthenticationEntryPoint 
         AuthenticationException authException) throws IOException {
         JwtExceptionCode exceptionCode = (JwtExceptionCode) request.getAttribute(
             JwtProperty.JWT_EXCEPTION);
-        String encode = URLEncoder.encode("비정상적인 접근입니다.", "UTF-8");
+
+        String encode = URLEncoder.encode("비정상적인 접근입니다.", StandardCharsets.UTF_8);
+
         if (Objects.nonNull(exceptionCode)) {
-            encode = URLEncoder.encode(exceptionCode.getMessage(), "UTF-8");
+            encode = URLEncoder.encode(exceptionCode.getMessage(), StandardCharsets.UTF_8);
         }
+
         response.sendRedirect(ApiPath.ERROR_AUTH + "?message=" + encode);
     }
 }
